rm main module's test code.