@@ -1,9 +1,52 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 name := "LSparker"
-
+scalaVersion := "2.11.12"
 version := "0.1"
+licenses := Seq("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0.html"))
 
-scalaVersion := "2.12.8"
+scalacOptions ++= Seq(
+  "-deprecation",
+  "-encoding", "UTF-8",
+  "-feature",
+  "-unchecked",
+  "-Xlint",
+  "-Yno-adapted-args",
+  "-Ywarn-dead-code",
+  "-Ywarn-numeric-widen",
+  "-Ywarn-value-discard",
+  "-language:implicitConversions"
+)
 
-libraryDependencies += "org.apache.spark" %% "spark-core" % "2.4.0"
-libraryDependencies += "org.apache.lucene" % "lucene-core" % "7.6.0"
-libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.5" % "test"
+javacOptions ++= Seq("-Xlint",
+  "-Xms512M",
+  "-Xmx2048M",
+  "-XX:MaxPermSize=2048M",
+  "-XX:+CMSClassUnloadingEnabled"
+)
+
+
+libraryDependencies ++= Seq(
+  "org.apache.spark" %% "spark-core" % "2.4.0",
+  "org.apache.lucene" % "lucene-core" % "7.6.0",
+  "org.scalatest" %% "scalatest" % "3.0.5" % "test",
+  "com.holdenkarau" %% "spark-testing-base" % s"2.3.1_0.10.0" % "test" intransitive()
+)
+
+
+
